--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="css/styles.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-    
+    <h1>Akan Names Generator</h1>
+    <p></p>
 </body>
 </html>
