--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
 </head>
 <body>
     <h1>Akan Names Generator</h1>
-    <p></p>
+    <p>Explore your Akan Name from Ghana.</p>
+
+    <form>
+        <label for="date">Date</label><br>
+        <input type="text" id="date" name="date" required><br>
+        <label for="month">Month</label><br>
+        <input type="text" id="month" name="month" required><br>
+        <label for="year">Year</label><br>
+        <input type="text" id="year" name="year" required>
+    </form><br>
+    <input type="radio" id="male" name="gender" value="male">
+    <label for="male">Male</label>
+    <input type="radio" id="female" name="gender" value="female">
+    <label for="female">Female</label><br><br>
+    <input type="submit" value="submit">
+    <script src= script.js>
+        <var days=
+    </script>
 </body>
 </html>
