--- a/index.html
+++ b/index.html
@@ -4,13 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Akan-Names</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link href="css/styles.css" type="text/css" rel="stylesheet">
 </head>
 <body>
     <h1>Akan Names Generator</h1>
     <p>Explore your Akan Name from Ghana.</p>
-
-    <form>
+    <div class="container">
+        <form action="">
+            <div class="form-group">
+                <label for="date">Date</label>
+                <input type="date" class="form-control w-50" id="date">
+            </div>
+            <div class="form-group">
+                <label for="gender">Gender</label>
+                <select name="gender" class="form-control w-50" id="genders">
+                    <option value="male">Male</option>
+                    <option value="female">Female</option>
+                </select>
+            </div>
+            <button class="btn btn-info" onclick="myFunction()">Submit</button>
+        </form>
+    </div>
+    <!-- <form>
         <label for="date">Date</label><br>
         <input type="text" id="date" name="date" required><br>
         <label for="month">Month</label><br>
@@ -22,10 +38,9 @@
     <input type="radio" id="male" name="gender" value="male">
     <label for="male">Male</label>
     <input type="radio" id="female" name="gender" value="female">
-    <label for="female">Female</label><br><br>
-    <input type="submit" value="submit">
-    <script src= script.js>
-        <var days=
-    </script>
+    <label for="female">Female</label><br><br> -->
+    <!-- <input type="submit" onclick="myFunction()" value="submit"> -->
+    
+    <script src= "script.js"></script>
 </body>
 </html>
