--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
     <h1>Akan Names Generator</h1>
     <p>Explore your Akan Name from Ghana.</p>
+    <p>Interesting right ??</p>
+    <p>Let us start !!</p>
+    <p><em>Welcome !!</em></p>
     <div class="container">
         <form action="">
             <div class="form-group">
