updated on the strong tags

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p>Explore your Akan Name from Ghana.</p>
     <p>Interesting right ??</p>
     <p>Let us start !!</p>
-    <p><em>Welcome !!</em></p>
+    <p><strong>Welcome !!</strong></p>
     <div class="container">
         <form action="">
             <div class="form-group">
