--- a/index.html
+++ b/index.html
@@ -45,5 +45,8 @@
     <!-- <input type="submit" onclick="myFunction()" value="submit"> -->
     
     <script src= "script.js"></script>
+    <div class="footer">
+        <p><Footer</p>
+    </footer>
 </body>
 </html>
