add class to h1

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="css/styles.css" type="text/css" rel="stylesheet">
 </head>
 <body>
+    <div class="heading"></div>
     <h1>Akan Names Generator</h1>
     <p>Explore your Akan Name from Ghana.</p>
     <p>Interesting right ??</p>
