--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 <body>
     <div class="heading"></div>
     <h1>Akan Names Generator</h1>
+    <div class="paragraphs">
     <p>Explore your Akan Name from Ghana.</p>
     <p>Interesting right ??</p>
     <p>Let us start !!</p>
     <p><strong>Welcome !!</strong></p>
+    </div>
     <div class="container">
         <form action="">
             <div class="form-group">
